--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ol>
         <div id="control-wrapper">
             <button id="clear-completed-button" class="pretty-button">Clear Completed</button>
-            <button id="empty-button" class="pretty-button">Empty List</button>
+            <button id="delete-button" class="pretty-button">Delete List</button>
             <button id="save-button" class="pretty-button">Save List</button>
         </div>
     </div>
