--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>To-Do List</title>
@@ -11,6 +12,8 @@
             <input type="text" id="todo-entry-box" />
         </form>
         <button id="add-button" class="pretty-button">Add</button>
+        <!-- Button to go to "cake recipe"
+        <button id="recipe-button" class="pretty-button">Cake Recipe</button>-->
         <br />
         <ol id="todo-list">
         </ol>
