--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </form>
         <button id="add-button" class="pretty-button">Add</button>
         <!-- Button to go to "cake recipe" -->
-        <button id="recipe-button" class="pretty-button" href="sweetscroll.html">Cake Recipe</button>
+        <a id="recipe-button" class="pretty-button" href='sweetscroll.html'>To Cake Recipe!</a>
         <br />
         <ol id="todo-list">
         </ol>
