--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             <input type="text" id="todo-entry-box" />
         </form>
         <button id="add-button" class="pretty-button">Add</button>
-        <!-- Button to go to "cake recipe" -->
-        <button id="recipe-button" class="pretty-button" onclick="location.href='sweetscroll.html';">To Cake Recipe!</a>
+        <!-- Button to go to "cake recipe"
+        <button id="recipe-button" class="pretty-button" onclick="location.href='sweetscroll.html';">To Cake Recipe!</a>-->
         <br />
         <ol id="todo-list">
         </ol>
