--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <input type="text" id="todo-entry-box" />
         </form>
         <button id="add-button" class="pretty-button">Add</button>
+        <button id="cake-recipe" class="pretty-button">To Cake Recipe!</button>
         <br />
         <ol id="todo-list">
         </ol>
