--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-    <title>To-Do List</title>
+    <title>Guild/Siege Team List</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="todo-wrapper">
-        <h2>To-Do</h2>
-        <p>Double-click an item to mark it complete.</p>
+        <h2>Teams</h2>
+        <p>Double-click an item to mark it as WIP.</p>
         <form name="todo-adder">
             <input type="text" id="todo-entry-box" />
         </form>
